--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ future==0.15.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+MongoAlchemy==0.21
+nose==1.3.7
+pymongo==3.2.2
 python-telegram-bot==3.4
 six==1.10.0
 Werkzeug==0.11.5
