--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ MarkupSafe==0.23
 MongoAlchemy==0.21
 nose==1.3.7
 pymongo==3.2.2
+python-i18n==0.3.1
 python-telegram-bot==3.4
 six==1.10.0
 Werkzeug==0.11.5
