--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.4.1
 configobj==5.0.6
 future==0.15.2
 itsdangerous==0.24
@@ -8,5 +9,6 @@ nose==1.3.7
 pymongo==3.2.2
 python-i18n==0.3.1
 python-telegram-bot==3.4
+requests==2.9.1
 six==1.10.0
 Werkzeug==0.11.5
