--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 beautifulsoup4==4.4.1
+bs4==0.0.1
 configobj==5.0.6
+coverage==4.0.3
 future==0.15.2
+httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-MongoAlchemy==0.21
+neomodel==2.0.2
 nose==1.3.7
-pymongo==3.2.2
+omnijson==0.1.2
+poster==0.8.1
+py2neo==2.0.7
+python-dateutil==1.5
 python-i18n==0.3.1
 python-telegram-bot==3.4
+pytz==2015.7
+PyYAML==3.11
 requests==2.9.1
 six==1.10.0
 Werkzeug==0.11.5
